--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -429,11 +429,11 @@ h6,
   color: #ffffff;
 }
 #menu-d .link {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 #menu-d .dropdown-item,
 #menu-d .nav-dropdown-sm .link {
-  font-size: 0.758rem;
+  font-size: 0.866rem;
 }
 #menu-d .link:hover,
 #menu-d .dropdown-item:hover,
@@ -443,19 +443,19 @@ h6,
 }
 #menu-d .link[aria-expanded="true"],
 #menu-d .dropdown-menu {
-  background: #141414;
+  background: #e6e6e6;
 }
 #menu-d .nav-dropdown-sm .link:focus,
 #menu-d .nav-dropdown-sm .link:hover,
 #menu-d .nav-dropdown-sm .dropdown-item:focus,
 #menu-d .nav-dropdown-sm .dropdown-item:hover {
-  background: #262626!important;
+  background: #f7f7f7!important;
 }
 #menu-d .navbar,
 #menu-d .nav-dropdown-sm,
 #menu-d .nav-dropdown-sm .link[aria-expanded="true"],
 #menu-d .nav-dropdown-sm .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 #menu-d .bg-color.transparent .link {
   color: #ffffff;
@@ -544,15 +544,15 @@ h6,
   font-size: 15px;
 }
 #ext_menu-k .navbar-toggler {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-k .close-icon::before,
 #ext_menu-k .close-icon::after {
-  background-color: #ffffff;
+  background-color: #28324e;
 }
 #ext_menu-k .link,
 #ext_menu-k .dropdown-item {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-k .link {
   font-size: 0.95rem;
@@ -569,22 +569,22 @@ h6,
 }
 #ext_menu-k .link[aria-expanded="true"],
 #ext_menu-k .dropdown-menu {
-  background: #141414;
+  background: #e6e6e6;
 }
 #ext_menu-k .nav-dropdown-sm .link:focus,
 #ext_menu-k .nav-dropdown-sm .link:hover,
 #ext_menu-k .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-k .nav-dropdown-sm .dropdown-item:hover {
-  background: #262626!important;
+  background: #f7f7f7!important;
 }
 #ext_menu-k .navbar,
 #ext_menu-k .nav-dropdown-sm,
 #ext_menu-k .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-k .nav-dropdown-sm .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 #ext_menu-k .bg-color.transparent .link {
-  color: #ffffff;
+  color: #28324e;
   transition: none;
 }
 #ext_menu-k .bg-color.transparent.opened .link {
@@ -671,15 +671,15 @@ h6,
   font-size: 15px;
 }
 #ext_menu-17 .navbar-toggler {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-17 .close-icon::before,
 #ext_menu-17 .close-icon::after {
-  background-color: #ffffff;
+  background-color: #28324e;
 }
 #ext_menu-17 .link,
 #ext_menu-17 .dropdown-item {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-17 .link {
   font-size: 0.95rem;
@@ -696,22 +696,22 @@ h6,
 }
 #ext_menu-17 .link[aria-expanded="true"],
 #ext_menu-17 .dropdown-menu {
-  background: #141414;
+  background: #e6e6e6;
 }
 #ext_menu-17 .nav-dropdown-sm .link:focus,
 #ext_menu-17 .nav-dropdown-sm .link:hover,
 #ext_menu-17 .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-17 .nav-dropdown-sm .dropdown-item:hover {
-  background: #262626!important;
+  background: #f7f7f7!important;
 }
 #ext_menu-17 .navbar,
 #ext_menu-17 .nav-dropdown-sm,
 #ext_menu-17 .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-17 .nav-dropdown-sm .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 #ext_menu-17 .bg-color.transparent .link {
-  color: #ffffff;
+  color: #28324e;
   transition: none;
 }
 #ext_menu-17 .bg-color.transparent.opened .link {
@@ -741,15 +741,15 @@ h6,
   font-size: 15px;
 }
 #ext_menu-17 .navbar-toggler {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-17 .close-icon::before,
 #ext_menu-17 .close-icon::after {
-  background-color: #ffffff;
+  background-color: #28324e;
 }
 #ext_menu-17 .link,
 #ext_menu-17 .dropdown-item {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-17 .link {
   font-size: 0.95rem;
@@ -766,22 +766,22 @@ h6,
 }
 #ext_menu-17 .link[aria-expanded="true"],
 #ext_menu-17 .dropdown-menu {
-  background: #141414;
+  background: #e6e6e6;
 }
 #ext_menu-17 .nav-dropdown-sm .link:focus,
 #ext_menu-17 .nav-dropdown-sm .link:hover,
 #ext_menu-17 .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-17 .nav-dropdown-sm .dropdown-item:hover {
-  background: #262626!important;
+  background: #f7f7f7!important;
 }
 #ext_menu-17 .navbar,
 #ext_menu-17 .nav-dropdown-sm,
 #ext_menu-17 .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-17 .nav-dropdown-sm .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 #ext_menu-17 .bg-color.transparent .link {
-  color: #ffffff;
+  color: #28324e;
   transition: none;
 }
 #ext_menu-17 .bg-color.transparent.opened .link {
@@ -799,6 +799,12 @@ h6,
   color: #000000;
 }
 #msg-box2-1j .mbr-section-subtitle {
+  color: #a0a0a0;
+}
+#msg-box2-1p .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-1p .mbr-section-subtitle {
   color: #a0a0a0;
 }
 #social-buttons3-1i .mbr-section-title,
