--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -606,15 +606,15 @@ h6,
   font-size: 15px;
 }
 #ext_menu-k .navbar-toggler {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-k .close-icon::before,
 #ext_menu-k .close-icon::after {
-  background-color: #ffffff;
+  background-color: #28324e;
 }
 #ext_menu-k .link,
 #ext_menu-k .dropdown-item {
-  color: #ffffff;
+  color: #28324e;
 }
 #ext_menu-k .link {
   font-size: 0.95rem;
@@ -631,22 +631,22 @@ h6,
 }
 #ext_menu-k .link[aria-expanded="true"],
 #ext_menu-k .dropdown-menu {
-  background: #141414;
+  background: #e6e6e6;
 }
 #ext_menu-k .nav-dropdown-sm .link:focus,
 #ext_menu-k .nav-dropdown-sm .link:hover,
 #ext_menu-k .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-k .nav-dropdown-sm .dropdown-item:hover {
-  background: #262626!important;
+  background: #f7f7f7!important;
 }
 #ext_menu-k .navbar,
 #ext_menu-k .nav-dropdown-sm,
 #ext_menu-k .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-k .nav-dropdown-sm .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 #ext_menu-k .bg-color.transparent .link {
-  color: #ffffff;
+  color: #28324e;
   transition: none;
 }
 #ext_menu-k .bg-color.transparent.opened .link {
